[Feat] 투표 조회 기능 구현 (#669)
* [feat] 투표 조회 관련 response 파일 추가

* [chore] vote_selection 테이블 column명 user_id로 수정

* [feat] mapper에 vote response 추가

* [feat] 투표 조회 기능 구현

* [feat] 커뮤니티 글 조회 시 투표도 조회되도록 반영

* [chore] 중복된 메소드 처리

* [chore] 테스트코드 내 repository->retriever로 수정

* [feat] 투표 조회 테스트 코드 구현

* [chore] voteResponse 이름 수정

* [chore] toList() 사용하도록 수정